# oauth-token-generator

./: CNAME  Cargo.toml  Dioxus.toml  README.md  index.html  package-lock.json
.github/workflows/: deploy.yaml
assets/: custom-dxh48b684a364b52fb.css  main-275110ea8273b617.css  main-275110ea8273b617.css.br  oauth-token-generator-51d74893d8c87e4e.js  oauth-token-generator-51d74893d8c87e4e.js.br  oauth-token-generator-c282812c0b9a6515.js  oauth-token-generator-c282812c0b9a6515.js.br  oauth-token-generator-dxh4d127db7542e36bd.js  oauth-token-generator_bg-70c6100c9a3689c0.wasm  oauth-token-generator_bg-70c6100c9a3689c0.wasm.br  oauth-token-generator_bg-de6735d501f268b8.wasm  oauth-token-generator_bg-de6735d501f268b8.wasm.br  oauth-token-generator_bg-dxh6b2f2e14446db278.wasm  tailwind-9647fc25014e84b9.css  tailwind-9647fc25014e84b9.css.br  tailwind.css
assets/styling/: custom.css  main.css
src/: main.rs
src/components/: form.rs  mod.rs
